# PINECONE_QUERY_AGENT

./: Dockerfile  README.md  docker_run.sh  pyproject.toml
app/: main.py  settings.py
app/query_agent/: agent.py  config.py
